fix gap for safari

--- a/src/screens/portfolio/hero/projectsList/projectsList.module.scss
+++ b/src/screens/portfolio/hero/projectsList/projectsList.module.scss
@@ -2,20 +2,22 @@
 
 .cardsList {
   margin: 0 auto;
-  display: flex;
+  display: grid;
   gap: 24px;
-  flex-wrap: wrap;
   width: 275px;
 
   @include md {
     width: 574px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   @include xl {
     width: 873px;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   @include xxl {
     width: 1172px;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
